# icclim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  ECA_indices_description.txt  HISTORY.rst  ICCLIM_files_tree.txt  LICENCE  LICENCE.txt  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  calc_percentiles.py  constraints.txt  doc_examples.py  eca_indices.py  environment.yml  example.py  final_pr_details.md  fix_269_pr_details.md  icclim.py  icclim_vs_cdo.py  pr_description.md  pr_details.md  pr_template.md  produce_all_indices.py  pyproject.toml  requirements-lock.txt  requirements.txt  requirements_dev.txt  script_test.py  setup.cfg  setup.py  test-abel-.py  test_copy_metadata.py  test_icclim.py  test_wps_calcul_indice.py  (+2 more)
.agent/workflows/: validate-real-data.md
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.yaml  PULL_REQUEST_TEMPLATE.md  contributing.rst
.github/workflows/: ci.yml  github-repo-stats  notebook_sync.yml  publish-to-pipy.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/archive/: bootstrap_performance_plan_2026-07-20.md  kraken_workspace_notes_2026-07-21.md
doc/source/dev/: ci.rst  climpact_comparison_protocol.rst  index.rst  percentile_bootstrap.rst  release_process.rst
doc/source/explanation/: 4.2.x_installation.rst  climate_indices.rst  index.rst  xclim_and_icclim.rst
doc/source/explanations/: index.rst
doc/source/how_to/: dask.rst  index.rst  notebooks.rst  ocgis.rst  recipes_custom.rst  recipes_ecad.rst  recipes_generic.rst
doc/source/howtos/: index.rst
doc/source/references/: custom_indices.rst  dcsc_functions_api.rst  ecad_functions_api.rst  frequency.rst  generic_functions_api.rst  icclim_index_api.rst  index.rst  output_metadata.rst  python_api.rst  release_notes.rst  threshold.rst  thresholds.rst
doc/source/tutorial/: Installation.rst  TUTO_C3S_Cold_Spell_Duration_Index.rst  TUTO_Cold_Spell_Duration_Index.rst  index.rst  installation.rst  python_virtual_env_setup.rst
doc/source/tutorials/: C4I_Averaged_Temperature_Anomaly_2081-2100_vs_1971-2000_SSP5.ipynb  C4I_TG90p_Calculate__subset_and_plot.ipynb  C4I_deltaT_deltaP_Anomaly_2081-2100_vs_1971-2000.ipynb  index.rst  (+2 more)
icclim/: .gitignore  ECA_indices_description.txt  __init__.py  _generated_api.py  calc_ind.py  calc_ind_2.py  calc_indice.py  calc_indice_2.py  calc_indice_perc.py  calc_indice_perc_first.py  calc_percentiles.py  callback.py  config_indice.json  eca_indices.py  ecad_functions.py  icclim.py  icclim_exceptions.py  icclim_logger.py  icclim_new.py  icclim_types.py  indices.py  libC.c  logging_info.py  main.py  maps.py  percentile_dict.py  regrid.py  regrid_util.py  set_globattr.py  set_longname_units.py  set_longname_units_custom_indices.py  set_title.py  spatial_stat.py  subset.py  test-abel-.py  test-abel.py  test_icclim.py  time_subset.py  todo-abel-.md  types.py  (+1 more)
icclim/clix_meta/: clix_meta_indices.py  index_definitions.yml
icclim/database/: metadata_global_v3.json  metadata_indices.json
icclim/ecad/: ecad_functions.py  ecad_indices.py  xclim_binding.py
icclim/generic_indices/: __init__.py  cf_input.py  cf_var_metadata.py  generic_index_functions.py  generic_indicators.py  generic_indices.py  generic_templates.py  standard_variable.py  threshold.py  threshold_templates.py
icclim/icclim_doc/: Makefile
icclim/models/: IcclimDaskConfiguration.py  __init__.py  cf_calendar.py  cf_variable.py  climate_index.py  climate_variable.py  constants.py  ecad_indices.py  frequency.py  global_metadata.py  index_config.py  index_group.py  indice_config.py  logical_link.py  logical_operation.py  netcdf_version.py  operator.py  quantile_interpolation.py  registry.py  standard_index.py  threshold.py  user_index_config.py  user_index_dict.py  user_indice_config.py
icclim/my_tests/: GSL.py
icclim/pre_processing/: in_file_dictionary.py  input_parsing.py  rechunk.py
icclim/scripts_examples/: example_regrid.py  multivariate_indice_calculation.py  simple_indice_calculation.py
icclim/test-cases/: auxiliary.py  icclim-test-wrapper.py
icclim/tests/: stubs.py  test_bridge.py  test_calc_operation.py  test_cf_calendar.py  test_dispatcher.py  test_ecad_indices.py  test_frequency.py  test_generated_api.py  test_index_group.py  test_indicies.py  test_input_parsing.py  test_main.py  test_operation.py  test_operators.py  test_rechunk.py  test_spi6.py  test_threshold.py  test_user_index.py  test_user_indices.py  test_user_indicies.py  test_utils.py  testing_utils.py
icclim/user_indice/: bridge.py  operation.py  stat.py  user_indice.py
icclim/user_indices/: api_bridge.py  bridge.py  calc_operation.py  dispatcher.py  operation.py  operators.py  stat.py
icclim/util/: OCGIS_tile.py  VARS_structure.txt  __init__.py  anomalies.py  arr_size.py  calc.py  callback.py  check.py  files_order.py  logging_info.py  metadata.py  read.py  regrid.py  simple.py  spatial_stat.py  user_indice.py  util_dt.py  util_nc.py
icclim/xclim_catalog/: __init__.py  xclim_indices.py
icclim_doc/source/: conf.py  contact.rst  examples.rst  important_to_know.rst  index.rst
scripts/: __init__.py  benchmark_bootstrap_tg90p.py  compare_bootstrap_cached_outputs.py  compare_stats.py  slurm_benchmark_bootstrap_tg90p.sh  verify_index_against_reference.py  verify_precip_against_climpact.py
src/icclim/: __init__.py  _generated_api.py  exception.py  frequency.py  icclim_exceptions.py  icclim_logger.py  icclim_types.py  logger.py  main.py  rechunk.py  utils.py
tests/: test_cf_calendar.py  test_dcsc.py  test_ecad_indices.py  test_frequency.py  test_generated_api.py  test_generic_functions.py  test_index_group.py  test_input_parsing.py  test_issue_340.py  test_logger.py  test_main.py  test_partial_seasons.py  test_percentile_bootstrap.py  test_rechunk.py  test_seasonal_precipitation.py  test_snow_depth_unit_conversion.py  test_spatially_varying_seasons.py  test_threshold.py  test_user_index.py  test_utils.py  testing_utils.py
tools/: __init__.py  build.sh  extract-icclim-funs.py  extract_icclim_funs.py  update_logo_version.py
(+274 files in other folders)
