[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "icclim"
authors = [
  {name = "Christian Page", email = "christian.page@cerfacs.fr"}
]
maintainers = [
  {name = "Christian Page", email = "christian.page@cerfacs.fr"},
  {name = "Abel Aoun", email = "aoun.abel@gmail.com"}
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
keywords = ["netcdf", "climate", "climate-indices", "climate-indicators", "xarray"]
dependencies = [
  "numpy>=1.21",
  "xarray>=2022.6.0",
  "xclim>=0.45.0",
  "cf_xarray>=0.7.4",
  "cftime>=1.5.0",
  "dask[array]>=2022.2.0",
  "netCDF4>=1.5.7",
  "zarr>=2.11.0",
  "numcodecs>=0.10.0",
  "fsspec",
  "pandas>=1.3.0",
  "dateparser>=1.1.0",
  "pint>=0.20",
  "jinja2>=3.0",
  "typing-extensions>=4.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = [
  "flit",
  "ruff",
  "pip",
  "pre-commit>=2.9",
  "sphinx-autobuild",
  "docstring_parser"
]
doc = [
  "sphinx>=8.1.3",
  "sphinx_codeautolink",
  "sphinx_copybutton",
  "sphinx_lfs_content",
  "sphinx-autoapi",
  "pydata-sphinx-theme",
  "nbsphinx",
  "ipython"
]

[project.urls]
Documentation = "https://icclim.readthedocs.io/en/latest/how_to/index.html"
Source = "https://github.com/cerfacs-globc/icclim/"
CI = "https://github.com/cerfacs-globc/icclim/actions"

[tool.pytest.ini_options]
testpaths = ["tests", "src/icclim"]
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
norecursedirs = ["src/icclim/_generated"]

[tool.ruff]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "E", # pycodestyle error
  "W", # pycodestyle warn
  "C90", # mccabe
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  # "FBT", # flake8-boolean-trap, to add
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "DJ", # flake8-django
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "G", # flake8-logging-format
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT", # flake8-pytest-style
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "INT", # flake8-gettext
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "TD", # flake8-todos
  "ERA", # eradicate
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "TRY", # tryceratops
  "FLY", # flynt
  "NPY", # NumPy-specific rules
  "AIR", # Airflow
  "PERF", # Perflint
  # "FURB", # refurb, preview
  "LOG", # flake8-logging
  "RUF" # Ruff-specific rules
]
ignore = [
  # -- Rules to add
  "PLR0913", # too many arguments in function, to add
  "PLR2004", # Magic values, to add
  "PLR0915", # Too many statement, to add
  # -- True ignore
  "ISC001", # String concat on same line, Managed by ruff format
  "COM812", # No comma at the end, Managed by ruff format
  "SIM102", # Allow nexted if
  "E501", # Allow line too long
  "D200", # Allow one-line docstring on several lines

  "UP007", # Ignore Use `X | Y` for type annotations
  "D401", # Allow docstrings to have non-imperative mood.

  "ANN002", # Allow no typing for `*args`
  "ANN003", # Allow no typing for `**kwargs`
  "N803" # Allow non-lowercase argument names (established API names like ignore_Feb29th)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # Allow asserts allowed in tests.
  "S307", # Allow eval in tests.
  "ARG", # Allow unused function args for tests fixtures.
  "FBT", # Allow booleans as positional arguments in tests.
  "D", # Disable docstring check for tests.
  "ANN", # Disable type check for tests.
  "F821", # Allow _empty.
  "SLF001" # Allow access to private values from tests.
]
"src/icclim/_generated/*.py" = [
  "F821", # Allow placeholder names like _empty in generated API.
  "N803", # Allow non-lowercase argument names.
  "A001", # Allow shadowing built-ins.
  "F403", # Allow star imports.
  "F401", # Allow unused imports (often used in headers for convenience).
  "ERA001", # Allow commented out code.
  "PLC0415", # Allow local imports (used to break circular dependencies).
  "W293", # Allow blank lines with whitespace.
  "I001", # Allow unsorted imports.
  "RUF100", # Allow unused noqa.
  "RUF022", # Allow unsorted __all__.
  "D" # Disable docstring checks for generated files.
]
"doc/source/conf.py" = [
  "INP001" # conf.py is a standalone script, not a package.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
